# youtube-analytics-project

./: pyproject.toml
homework-2/: vdud.json
src/: channel.py  playlist.py  video.py
