[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Lana Virina <lana.virina@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_analytics_project"}]

[tool.poetry.dependencies]
python = "^3.11"
isodate = "^0.6.1"
google-api-python-client = "^2.80.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

isodate~=0.6.1